--- a/src/app/home/voting/voting.component.html
+++ b/src/app/home/voting/voting.component.html
@@ -30,17 +30,21 @@
 <div class="row justify-content-center sticky-ether-account"
     [ngStyle]="{ 'width': isSideBarActive ? 'calc(100% - 250px)' : '100%'}"
     *ngIf="hasBlockchainAccount && ballotInfo">
-    <div class="col" *ngIf="canVote && !isVote">
-        Please select maximum {{ ballotInfo.limitCandidate }} and minimum 1 out of {{ candidates.length }} candidates
-        <button mat-stroked-button class="btn-vote ml-3" (click)="onVoteToBlockchain()">Vote</button>
+    <div class="col " *ngIf="canVote && !isVote">
+        Please select minimum 1 and maximum {{ ballotInfo.limitCandidate }} out of {{ candidates.length }} candidates
+        <button mat-stroked-button class="btn-vote ml-3" (click)="onVoteToBlockchain()" [ngStyle]="{'border-color': '#fff'}">Vote</button>
     </div>
 
     <div class="col" *ngIf="canVote && isVote">
         You are late! The voting phase ended. You are not able to submit your vote anymore.
     </div>
 
-    <div class="col" *ngIf="!canVote && now < phaseInfo['endVotingPhase']">
+    <div class="col" *ngIf="!canVote && now < phaseInfo['startVotingPhase']">
         It is not time yet! Voting phase will start at <span> {{ displayPhaseInfo['startVotingPhase'] | date: 'fullDate'}}</span>
+    </div>
+
+    <div class="col" *ngIf="!canVote && now > phaseInfo['startVotingPhase'] && now < phaseInfo['endVotingPhase']">
+        You are not eligible to submit your ballot
     </div>
 
     <div class="col" *ngIf="!canVote && now > phaseInfo['endVotingPhase']">
