--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import './variables';
-@import './checkbox';
+/* @import './checkbox'; */
+@import './primaryTheme';
+@import './spinner';
 
 input:focus,
 select:focus,
