--- a/src/app/ea-admin/setup-confirm-dialog/setup-confirm-dialog.component.scss
+++ b/src/app/ea-admin/setup-confirm-dialog/setup-confirm-dialog.component.scss
@@ -20,10 +20,10 @@
     height: 127px;
 }
 .login-toolbar {
-    background-color: $login-primary-color;
+    background-color: $brand-secondary;
     color: $text-on-secondary;
     height: inherit;
-    padding-left: 40px;
+    /* padding-left: 40px; */
     font-size: 25px;
     font-weight: 300;
     /* box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15); */
