--- a/src/app/home/password-entry-dialog/password-entry-dialog.component.html
+++ b/src/app/home/password-entry-dialog/password-entry-dialog.component.html
@@ -27,11 +27,11 @@
 
         <!-- Button group -->
         <div class="flex-center">
-            <button id="sign-in-btn" mat-flat-button color="accent" (click)="onSignButtonClicked()" class="full-width-input setup"
+            <button type="button" id="sign-in-btn" mat-flat-button color="accent" (click)="onSignButtonClicked()" class="full-width-input setup"
                     [disabled]="!passwordForm.valid">
                 <span class="text-color-login-form"> SIGN YOUR BALLOT </span>
             </button>
-            <button (click)="onCancelClicked(false)" mat-stroked-button class="full-width-input cancel">
+            <button type="button" (click)="onCancelClicked(false)" mat-stroked-button class="full-width-input cancel">
                 <span class="text-color-login-form"> CANCEL </span>
             </button>
         </div>
@@ -41,14 +41,14 @@
         <div *ngIf="error && !isLoading">
             <p>Error message: {{ error}}</p>
             <p>Try again later!</p>
-            <button (click)="onCancelClicked(false)" mat-flat-button color="accent" class="full-width-input setup">
+            <button type="button" (click)="onCancelClicked(false)" mat-flat-button color="accent" class="full-width-input setup">
                 <span class="text-color-login-form">CLOSE</span>
             </button>
         </div>
 
         <div *ngIf="isSuccess && !isLoading">
             You have successfully submit your vote!
-            <button (click)="onCancelClicked(true)" mat-flat-button color="accent" class="full-width-input setup">
+            <button type="button" (click)="onCancelClicked(true)" mat-flat-button color="accent" class="full-width-input setup">
                 <span class="text-color-login-form">OK</span>
             </button>
         </div>
