--- a/src/app/ea-admin/management/management.component.scss
+++ b/src/app/ea-admin/management/management.component.scss
@@ -104,3 +104,11 @@
         padding: 0 160px;
     }
 }
+
+.list-candidate {
+    .candidate-img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+    }
+}
