--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,7 +13,8 @@ button:focus {
 }
 
 body {
-    background-color: $white !important;
+    /* background-color: $white !important; */
+    background-color: white !important;
     font-family: 'Roboto', sans-serif;
     font-family: 'Open Sans', sans-serif;
 }
