enable https Angular / auto logout / fix bug

--- a/src/app/home/account-dialog/account-dialog.component.html
+++ b/src/app/home/account-dialog/account-dialog.component.html
@@ -32,9 +32,8 @@
                 </label>
             </div>
             <div class="checkbox session keep-signed">
-                <input class="styled-checkbox" id="styled-checkbox-1" type="checkbox" value="value1"
-                       formControlName="checked">
-                <label for="styled-checkbox-1"> I have read and agree with the condition above.</label>
+                <mat-checkbox id="styled-checkbox-1" type="checkbox" value="value1"
+                formControlName="checked">I have read and agree with the condition above.</mat-checkbox>
             </div>
         </div>
 
