--- a/src/app/home/score-board/score-board.component.html
+++ b/src/app/home/score-board/score-board.component.html
@@ -5,6 +5,7 @@
         [gradient]="gradient"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
+        [yAxisTickFormatting]="yAxisTickFormatting"
         [legend]="showLegend"
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
