--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -2,6 +2,7 @@
     <div class="col-md-auto col-layout">
         <div class="toolbar-box">
             <mat-toolbar class="login-toolbar">
+                <img src="../../../assets/brand/votereum_logo.png" width="51px" height="60px" class="d-inline-block align-top" alt="">
                 <span id="welcome" class="fill-remaining-space">
                     {{ pageStrings.SIGN_IN | uppercase }}
                 </span>
