--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,8 +4,8 @@
         <i class="material-icons">menu</i>
     </button> -->
     <a class="navbar-brand text-color">
-        <img src="../../../assets/brand/icon_black.png" width="50px" class="d-inline-block align-top" alt="">
-        <span class="fancy-font">{{brandName}}</span>
+        <img src="../../../assets/brand/votereum_full.png" width="137px" height="50px" class="d-inline-block align-top" alt="">
+        <!-- <span class="fancy-font">{{brandName}}</span> -->
     </a>
     
     <ul class="navbar-nav text-color">
