--- a/src/app/home/first-login/first-login.component.html
+++ b/src/app/home/first-login/first-login.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-auto col-layout">
         <div class="greeting">
             <div class="welcome text-h1">
-                Welcome to Ehter Vote
+                Welcome to Votereum
             </div>
             <div class="info-text text-h3">
                 Just one more step, change your default password and you are good to go!
