--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,7 +14,7 @@ button:focus {
 
 body {
     /* background-color: $white !important; */
-    background-color: white !important;
+    background-color: white;
     font-family: 'Roboto', sans-serif;
     font-family: 'Open Sans', sans-serif;
 }
