--- a/src/app/public/login/login.component.scss
+++ b/src/app/public/login/login.component.scss
@@ -1,30 +1,59 @@
 @import './src/scss/variables';
 
+
+
 .form-layout {
     margin-top: 100px;
 }
 
+.greeting-text {
+    color: $white;
+    position: fixed;
+    top: 200px;
+    left: 75px;
+    .welcome-text {
+        font-size: 80px;
+        font-weight: 300;
+    }
+    .logo {
+        .votereum-logo {
+            width: 250px;
+            padding-left: 25px;
+        }
+    }
+    .sub-title {
+        padding-top: 15px;
+        padding-left: 20px;
+        font-size: 20px;
+        font-weight: 300;
+    }
+}
+
 .col-layout {
-    width: 450px;
+    width: 440px;
+    /* margin-top: 100px; */
+    position: fixed;
+    top: 100px;
+    right: 100px;
 }
 .toolbar-box {
     /* margin-top: -60px;
     margin-bottom: 30px; */
-    height: 127px;
+    height: 130px;
 }
 .login-toolbar {
     background-color: $brand-secondary;
     color: $text-on-secondary;
     height: inherit;
     padding-left: 25px;
-    font-size: 25px;
+    font-size: 35px;
     font-weight: 300;
     /* box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15); */
 }
 
 .form-group {
-    height: 380px;
-    padding: 50px 40px 20px 40px;
+    height: 310px;
+    padding: 40px 40px 20px 40px;
     background-color: $primary-light;
     /* box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12); */
     box-shadow: 0 2px 2px rgba(10,16,20,.24), 0 0 2px rgba(10,16,20,.12);
@@ -34,7 +63,7 @@
     width: 100%;
     &.mat-flat-button {
         /* border-radius: 25px; */
-        margin-top: 40px;
+        margin-top: 20px;
     }
 
 }
@@ -49,7 +78,7 @@
 }
 
 #welcome {
-    margin-left: 10px;
+    margin-left: 15px;
 }
 
 .user-icon {
@@ -61,7 +90,8 @@
     background-color: $brand-success;
     border-radius: 50%;
     margin-top: -75px;
-    margin-left: 293px;
+    margin-left: 265px;
+    margin-bottom: 12px;
     box-shadow: 0 4px 4px rgba(10,16,20,.24), 0 0 2px rgba(10,16,20,.12);
     .fa-user-cog {
         font-weight: 600;
@@ -80,22 +110,6 @@
         cursor: pointer;
         text-decoration: underline;
         color: $text-on-primary;
-    }
-    .session {
-        .session-text {
-            font-size: 12px;
-            font-weight: 500;
-            color: $primary-darker;
-        }
-    }
-    .keep-signed {
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-top: 2px;
-    }
-    .forget-pwd {
-        padding-left: 20px;
-        padding-right: 20px;
     }
     .checkbox-login {
         &.mat-checkbox {
