fix loading page

--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-md-center" *ngIf="!isLoading">
+<div class="row justify-content-md-center public-bg" *ngIf="!isLoading">
     <div class="col greeting-text">
         <div class="welcome-text">WELCOME TO</div>
         <div class="logo">
